# argon2-service-worker

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc.example
benchmark/: create-and-verify.js
db/migrations/: 0001_init.sql
demo/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc.example
demo/public/: index.html
demo/src/: handlers.ts  index.ts  page.ts
src/: lib.rs
test/: index.test.ts
