[package]
name = "argon2-passwords-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
getrandom = { version = "0.2", features = ["js"] }